[gd_scene load_steps=5 format=3 uid="uid://8myalisc8jx3"]

[ext_resource type="Script" path="res://Environment/Hub Level Select/Tree Select.gd" id="1_jhxht"]
[ext_resource type="Texture2D" uid="uid://dmi0omjoaihiq" path="res://Sprites/Level Exit.png" id="2_wcbdl"]
[ext_resource type="Texture2D" uid="uid://1x0sxn2w4c61" path="res://Sprites/Best E.png" id="3_ayamj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq4mx"]
size = Vector2(110, 98)

[node name="TreeWorld" type="Node2D"]
script = ExtResource("1_jhxht")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wcbdl")

[node name="Area2D" type="Area2D" parent="."]

[node name="BestE" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(-1, -77)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ayamj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_cq4mx")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -437.0
offset_top = -499.0
offset_right = 513.0
offset_bottom = -57.0
color = Color(0.411765, 1, 0.0784314, 0.258824)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.842
offset_left = 170.0
offset_top = 53.0
offset_right = 298.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Button" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 1"

[node name="Button2" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 2"

[node name="Button3" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 3
"

[node name="Button4" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 4"

[connection signal="body_entered" from="Area2D" to="." method="_on_world_select_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_world_select_exited"]
[connection signal="pressed" from="ColorRect/GridContainer/Button" to="." method="on_tree_level_one_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Button2" to="." method="_on_tree_level_two_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Button3" to="." method="_on_tree_level_three_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Button4" to="." method="_on_tree_level_four_pressed"]
